--- a/web_blog/templates/posts.html
+++ b/web_blog/templates/posts.html
@@ -1,16 +1,17 @@
 {% extends "base.html" %}
 {% base content %}
 <div class="container">
-	<h2>{{ blog_title}}</h2>
-	{% if posts | length >0 %}
-		{% for post in posts %}
-		<h3>{{post.title}}</h3>
-		<p>{{post.content}}</p>
-		<p>{{post.author}}</p>
-		<hr>
-		{% endfor %}
+	<h2>{{blog title }}</h2>
+	<button class="btn btn-primary"><a href="/posts/new/{{blog_id}}" ></a>New post</button>
+	{% if posts |length >0 %}
+	{% for post in posts %}
+	<h3>{{post.title}}</h3>
+	<p>{{post.content}}</p>
+	<p>{{post.author}}</p>
+	<hr>
+	{% endfor %}
 	{% else %}
-		<h4>There are no posts yet</h4>
+	<h4>There aren't any posts yet!</h4>
 	{% endif %}
 </div>
 
