--- a/web_blog/templates/home.html
+++ b/web_blog/templates/home.html
@@ -5,6 +5,7 @@
     <title>Home</title>
 </head>
 <body>
-Home Page
+<a href="/login"><button>Login</button></a>
+<a href="/register"><button>Register</button></a>
 </body>
 </html>
