--- a/web_blog/templates/new_post.html
+++ b/web_blog/templates/new_post.html
@@ -1,16 +1,16 @@
 {% extends "base.html" %}
 {% block content %}
 <div class="container">
-<form id="new-blog" action="/blogs/new" method="post">
+<form id="new-blog" action="/posts/new/{{ blog_id }}" method="post">
 	<div class="form-group">
 		<label for="title">Title</label>
 	<input type="text" id="title" class="form-control" name="title">
 </div>
 <div class="form-group">
-	<label for="description">Description</label>
-	<input type="text" id="description" class="form-control" name="description">
+	<label for="content">Content</label>
+	<input type="text" id="content" class="form-control" name="content">
 </div>
-	<button type="submit" class="btn btn-default">Create new blog</button>
+	<button type="submit" class="btn btn-default">Create New Post</button>
 </form>
 </div>
 
