--- a/web_blog/templates/user_blogs.html
+++ b/web_blog/templates/user_blogs.html
@@ -1,12 +1,13 @@
 {% extends "base.html" %}
-{% base content %}
+{% block content %}
 <div class="container">
 	<h2>{{ email}}'s blogs</h2>
 	{% for blog in blogs %}
-	<h3><a href="/posts/{{blog.id}}">{{blog.title}}</a></h3>
+	<h3><a href="/posts/{{blog._id}}">{{blog.title}}</a></h3>
 	<p>{{blog.description}}</p>
 	<hr>
 	{% endfor %}
+	<a href="/blogs/new"><button>New Blog</button></a>
 </div>
 
 {% endblock %}
